testing for isYes completed

--- a/lab-01/index.html
+++ b/lab-01/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="/main.css">
+  <link rel="stylesheet" type="text/css" href="./src/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <title>About Us</title>
 </head>
 <body>
@@ -34,8 +35,12 @@
       </ul>
     </section>
     <div>
-      <button>Take Quiz!</button>
+      <button id="quizbutton">Take Quiz!</button>
     </div>
+    <section id="results">
+      <h2>Your Results:</h2>
+      <p id="total"></p>
+    </section>
   </main>
 </body>
 </html>
