worte numberGame.js

--- a/lab-02/numberGuess.html
+++ b/lab-02/numberGuess.html
@@ -22,5 +22,6 @@
       <p class="hidden" id="result-container">You just: <span id="result-display">won</span></p>
     </section>
   </main>
+  <script src="./numberGame.js" type="module"></script>
 </body>
 </html>
