finished the guessing game

--- a/lab-02/numberGuess.html
+++ b/lab-02/numberGuess.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Number Guess</title>
+  <link rel="stylesheet" type="text/css" href="./src/number-guess.css">
 </head>
 <body>
   <header>
@@ -22,6 +23,6 @@
       <p class="hidden" id="result-container">You just: <span id="result-display">won</span></p>
     </section>
   </main>
-  <script src="./numberGame.js" type="module"></script>
+  <script src="./src/numberGame.js" type="module"></script>
 </body>
 </html>
