added renderCrystals function, and more

--- a/lab-06/products.html
+++ b/lab-06/products.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="src/products.css">
   <title>Product Page</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
           <h2>Quartz</h2>
           <h3>Quartz</h3>
           <img src="./assets/quartz.jpg">
-          <p>Quartz is clear and SICK.</p>
+          <h4>Quartz is clear and SICK.</h4>
           <p id="price">$50.00</p>
           <button value="id">Add</button>
         </li>
