looped through crystals to render them all to the page

--- a/lab-06/products.html
+++ b/lab-06/products.html
@@ -15,7 +15,7 @@
   </header>
   <main>
     <section id="products">
-      <ul>
+      <ul id='root'>
         <li>
           <h2>Quartz</h2>
           <h3>Quartz</h3>
@@ -27,5 +27,6 @@
       </ul>
     </section>
   </main>
+  <script src="./src/products.js" type="module"></script>
 </body>
 </html>
