testing rendering line item function

--- a/lab-07/cart.html
+++ b/lab-07/cart.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cart</title>
 </head>
+
 <body>
   <table>
     <thead>
@@ -16,7 +18,13 @@
         <th>Line Total</th>
       </tr>
     </thead>
-    <tbody>      
+    <tbody>
+      <tr>
+        <td>3</td>
+        <td>Quartz</td>
+        <td>5.00</td>
+        <td>$15.00</td>
+      </tr>
     </tbody>
     <tfoot>
       <tr>
@@ -29,4 +37,5 @@
   </table>
   <button>Place Order</button>
 </body>
+
 </html>
