hooked up js file to html file

--- a/lab-07/cart.html
+++ b/lab-07/cart.html
@@ -18,7 +18,7 @@
         <th>Line Total</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody id="root">
       <tr>
         <td>3</td>
         <td>Quartz</td>
@@ -36,6 +36,7 @@
     </tfoot>
   </table>
   <button>Place Order</button>
+  <script src="./src/shopping-cart.js" type="module"></script>
 </body>
 
 </html>
