--- a/lab-07/cart.html
+++ b/lab-07/cart.html
@@ -31,7 +31,7 @@
         <th></th>
         <th></th>
         <th>Order Total</th>
-        <th>$0.00</th>
+        <th id="total">$0.00</th>
       </tr>
     </tfoot>
   </table>
