--- a/lab-02/numberGuess.html
+++ b/lab-02/numberGuess.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <section>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <p>This is a numbers game! Put in a number between 1 and 20, and try and guess the correct number based on our hints...</p>
     </section>
     <section>
       <input type="number" id="enter-guess" min="1" max="20">
